--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -84,7 +84,7 @@
         </li>
       </ul>
       <a
-        href="{% url 'management/students' %}"
+        href="{% url 'import/users' %}"
         class="btn flex items-center gap-2 font-semibold"
       >
         <svg
