Added validations and solved bug

--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
-<title>Matricular</title>
+<title>Cadastrar usuário</title>
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 {% endblock %} {% block content %}
