--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
     <link rel="icon" type="image/png" href="{% static 'core/images/logo.png' %}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
@@ -19,6 +20,8 @@
         {% include "core/header.html" %}
       {% endif %}
       {% block content %}{% endblock %}
+      <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+      <script src="{% static 'core/js/homeprofessores.js' %}"></script>
     </div>
   </body>
 </html>
