Fixed exception when enrolling new students.

--- a/management/templates/management/courses_editor.html
+++ b/management/templates/management/courses_editor.html
@@ -79,7 +79,7 @@
         <div class="field">
           <label for="txt-desc">Descrição</label>
           <textarea
-            name="desc"
+            name="description"
             id="txt-desc"
             cols="30"
             rows="4"
