Fixed some visual issues

--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -23,8 +23,9 @@
     alert("Espere até 15 minutos para tentar um login novamente");
   }
 </script>
+<title>DEMZER - Login</title>
 {% endblock %} {% block content %}
-<main class="h-full w-full bg-color-primary py-5 sm:p-11" x-init="onInit()">
+<main class="h-screen w-full bg-color-primary py-5 sm:p-11" x-init="onInit()">
   <section
     class="relative h-full w-full justify-between rounded-3xl bg-slate-100 shadow-md shadow-slate-800 sm:flex"
   >
