--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,8 +17,10 @@
     <div class="w-full overflow-y-scroll">
       {% if not no_nav|default:False %}
         {% include "core/header.html" %}
-      {% endif %}
       <div class="pt-20">
+      {% else %}
+      <div>
+      {% endif %}
         {% block content %}{% endblock %}
       </div>
     </div>
