--- a/core/templates/core/horario.html
+++ b/core/templates/core/horario.html
@@ -1,5 +1,11 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
 {% endblock %} {% block content %} 
+<div class="flex justify-center min-h-full pt-24">
+<div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">
+    Horários
+
+</div>
+</div>
 
 {% endblock %}
