--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,4 +1,5 @@
-{% load static %}
+pip install -r requirements.txt
+npm i{% load static %}
 <nav
   class="sticky left-0 top-0 flex flex-col justify-between rounded-br-xl bg-color-primary py-5 text-slate-100 transition-all"
   :class="open ? 'w-80 px-5' : 'w-0 px-0'"
