--- a/core/templates/core/eventos.html
+++ b/core/templates/core/eventos.html
@@ -10,11 +10,12 @@
   <div class="cards">
     <div class="card shadow-1"></div>
     <div class="card shadow-1"></div>
+    <div class="card shadow-1"></div>
   </div>
 </div>
 
 <style>
-  html,
+html,
 body {
   margin: 0;
   background: #fafafa;
