--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -132,7 +132,7 @@
       :class="open || 'hidden'"
     >
       <li>
-        <a href="">
+        <a href="{% url 'horario' %}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
