--- a/core/templates/core/eventos.html
+++ b/core/templates/core/eventos.html
@@ -1,13 +1,34 @@
 {% extends 'core/base.html' %} {% load static %} {% load permission_tags %} {% block head %}
 
+<script>
+  $('.card').on('click', function() {
+  if ($(this).hasClass('open')) {
+    $('.card').removeClass('open');
+    $('.card').removeClass('shadow-2');
+    $(this).addClass('shadow-1');
+    return false;
+  } else {
+    $('.card').removeClass('open');
+    $('.card').removeClass('shadow-2');
+    $(this).addClass('open');
+    $(this).addClass('shadow-2');
+  }
+});
+</script>
+
 {% endblock %} {% block content %}
+
 <div class="flex justify-center min-h-full pt-24">
   <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">Eventos</div>
 
 </div>
-
 <div class="all">
   <div class="cards">
+    <div class="card shadow-1"></div>
+    <div class="card shadow-1"></div>
+    <div class="card shadow-1"></div>
+    <div class="card shadow-1"></div>
+    <div class="card shadow-1"></div>
     <div class="card shadow-1"></div>
     <div class="card shadow-1"></div>
     <div class="card shadow-1"></div>
@@ -15,7 +36,7 @@
 </div>
 
 <style>
-html,
+  html,
 body {
   margin: 0;
   background: #fafafa;
@@ -193,21 +214,7 @@ body {
 }
 </style>
 
-<script>
-  $('.card').on('click', function() {
-  if ($(this).hasClass('open')) {
-    $('.card').removeClass('open');
-    $('.card').removeClass('shadow-2');
-    $(this).addClass('shadow-1');
-    return false;
-  } else {
-    $('.card').removeClass('open');
-    $('.card').removeClass('shadow-2');
-    $(this).addClass('open');
-    $(this).addClass('shadow-2');
-  }
-});
-</script>
+
 {% endblock %}
 
 
