--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -1,6 +1,9 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
 {% endblock %} {% block content %}
+<div class="flex justify-center min-h-full pt-24">
+  <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">Boletim</div>
+</div>
 <div class="flex justify-center pb-40 ">
   <div class="grid grid-cols-10 gap-10 pt-44">
     <div class="col-span-6 col-start-2 h-auto w-max rounded-3xl bg-color-boletim">
