--- a/core/templates/core/horario.html
+++ b/core/templates/core/horario.html
@@ -2,10 +2,77 @@
 
 {% endblock %} {% block content %} 
 <div class="flex justify-center min-h-full pt-24">
-<div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">
-    Horários
-
+<div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]"> Horários </div>
 </div>
+
+
+    <div class="flex justify-center pb-40 ">
+        <div class="grid grid-cols-10 gap-10 pt-44">
+          <div class="col-span-6 col-start-2 h-auto w-max rounded-3xl bg-color-boletim">
+            <table class=" border-separate border-spacing-3 pl-2">
+              <thead>
+                  <tr>
+                    <th class="bg-color-boletim rounded-l-3xl"></th> <!-- empty -->
+                    <th class="bg-color-dark-orange p-3 rounded-xl"> Segunda </th>
+                    <th class="bg-color-dark-orange p-3 rounded-xl"> Terça </th>
+                    <th class="bg-color-dark-orange p-3 rounded-xl"> Quarta </th>
+                    <th class="bg-color-dark-orange p-3 rounded-xl"> Quinta </th>
+                    <th class="bg-color-dark-orange p-3 rounded-xl"> Sexta </th>
+                  </tr>
+              </thead>
+              <tbody >
+                <tr>
+                  <td class="bg-color-name-boletim rounded-xl text-white text-center">13h - 13h50</td>
+                  <td class="bg-color-grey rounded-t-lg border-none "></td>
+                  <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  <td class="bg-color-grey rounded-t-lg border-none"></td>
+                </tr>
+                <tr>
+                    <td class="bg-color-name-boletim rounded-xl text-white text-center">13h50 - 14h40</td>
+                    <td class="bg-color-grey rounded-t-lg border-none "></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  </tr>
+                  <tr>
+                    <td class="bg-color-name-boletim rounded-xl text-white text-center">14h40 - 15h30</td>
+                    <td class="bg-color-grey rounded-t-lg border-none "></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  </tr>
+                  <tr>
+                    <td class="bg-color-name-boletim rounded-xl text-white text-center">15h50 - 16h40</td>
+                    <td class="bg-color-grey rounded-t-lg border-none "></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  </tr>
+                  <tr>
+                    <td class="bg-color-name-boletim rounded-xl text-white text-center">16h40 - 17h30</td>
+                    <td class="bg-color-grey rounded-t-lg border-none "></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  </tr>
+                  <tr>
+                    <td class="bg-color-name-boletim rounded-xl text-white text-center">17h30 - 18h20</td>
+                    <td class="bg-color-grey rounded-t-lg border-none "></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                    <td class="bg-color-grey rounded-t-lg border-none"></td>
+                  </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
