--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -224,8 +224,19 @@
       <div class="flex flex-col col-start-3 col-end-9 h-[80px] w-full rounded-[50px] bg-white justify-center relative">
         <div class="flex items-center">
           <label class="ml-10 text-3xl font-semibold w-[700px] text-color-dark-orange" :class="open ? 'text-xl' : 'text-3xl'" >Reconsideração de Notas (Aberto até 00/00/0000)</label>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10 absolute top-9 right-10 transform -translate-y-1/2 translate-x-1/2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+          <svg 
+          xmlns="http://www.w3.org/2000/svg" 
+          fill="none" 
+          viewBox="0 0 24 24" 
+          stroke-width="1.5" 
+          stroke="currentColor" 
+          class="w-10 h-10 absolute top-9 right-10 transform -translate-y-1/2 translate-x-1/2"
+          >
+            <path 
+            stroke-linecap="round" 
+            stroke-linejoin="round" 
+            d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" 
+            />
           </svg>
         </div>
         <label class="ml-10 text-base text-gray-400">Clique no botão para conseguir sua reconsideração de nota</label>
