--- a/core/templates/core/eventos.html
+++ b/core/templates/core/eventos.html
@@ -5,6 +5,21 @@
 
 <div class="flex justify-center min-h-full pt-24">
   <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">Eventos</div>
+  <div class="rounded-2xl border border-color-secondary p-1.5">
+    <img
+    src="{% static '/core/images/filter.png' %}"
+    alt="Reunião"
+    width="100"
+    class="h-6 w-6 text-color-secondary"
+    >
+    <path
+      class="color-secondary"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0M3.124 7.5A8.969 8.969 0 015.292 3m13.416 0a8.969 8.969 0 012.168 4.5"
+    />
+  </img>
+  </div>
 </div>
 
 <div class>
@@ -117,6 +132,8 @@
         </div>
     </div>
 
+
+
 <style>
     .max-h-0 {
     max-height: 0;
@@ -149,6 +166,13 @@
       border-radius: 200px;
       height: 90px;
     }
+    .rounded-2xl {
+    border-radius: 50px/* 16px */;
+    }
+    .p-1\.5 {
+    padding: 10px/* 6px */;
+    }
+</style>
 </style>
     
 {% endblock %}
