--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -170,7 +170,7 @@
         </a>
       </li>
       <li>
-        <a href="provas&atividades.html">
+        <a href="{% url 'provas' %}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
